app/components/backgrounds/TriangleBackground/TriangleBackground.module.scss
@use '~/style/variables' as *;

@property --bg-gradient-angle {
	syntax: '<angle>';
	inherits: false;
	initial-value: 0deg;
}

@keyframes angle-rotate {
	from {
		--bg-gradient-angle: 0deg;
	}
	to {
		--bg-gradient-angle: 360deg;
	}
}

.background {
	position: fixed;
	z-index: $zIndexBackground;
	width: 100%;
	min-height: 100vh;

	top: 0;
	bottom: 0;

	background: center / cover url('/background_triangle.png');

	@media print {
		display: none;
	}

	&::after {
		position: fixed;
		display: block;
		content: '';
		width: 100vw;
		height: 100vh;
		top: 0;
		left: 0;
		z-index: -1;

		opacity: 0.5;

		background: conic-gradient(
			from var(--bg-gradient-angle),
			purple,
			blue,
			teal,
			teal,
			blue,
			purple
		);

		animation: angle-rotate 50s linear infinite;

		@media print {
			display: none;
		}
	}
}

